# game_of_life

./: Cargo.toml
src/: camera.rs  config.rs  controller.rs  flipper.rs  lib.rs  main.rs  presenter.rs  randomizer.rs  simulation.rs  vulkan.rs
src/shaders/: clear.comp  flip.comp  presenter.frag  presenter.vert  randomizer.comp  simulation.comp
